<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/text_inspeksi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_inspeksi"
                android:textAllCaps="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textStyle="bold"
                android:drawableLeft="@drawable/ic_minus"
                android:drawableRight="@drawable/ic_plus"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:text="@string/rayon"
            android:textAllCaps="true" />

            <Spinner
                android:id="@+id/sp_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:padding="20dp"/>

            <TextView
                android:layout_marginTop="@dimen/layout_marginTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jenis_temuan"
                android:textAllCaps="true"/>

            <Spinner
                android:id="@+id/sp_name2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:padding="20dp"/>

            <TextView
                android:layout_marginTop="@dimen/layout_marginTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tingkat_emergency"
                android:textAllCaps="true"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kritis"/>
                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/segera"/>
                <Button
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/biasa"/>
            </LinearLayout>

                <TextView
                    android:layout_marginTop="@dimen/layout_marginTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pemadaman"
                    android:textAllCaps="true"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/padam"/>
                    <Button
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tidak_padam"/>
            </LinearLayout>
        <TextView
            android:layout_marginTop="@dimen/layout_marginTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lokasi_inspeksi"
            android:textAllCaps="true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_location"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:padding="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="15sp"
                android:layout_marginLeft="280dp"
                android:textColor="@color/design_default_color_primary"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tgl_inspeksi"
            android:textColor="@color/black"
            android:padding="8dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Masukan Tanggal Inspeksi"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_foto_inspeksi"
            android:textColor="@color/black"
            android:padding="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"/>

        </LinearLayout>
</ScrollView>