<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_hasil_gangguan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arus_pasha_r"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arus_pasha_s"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint=""
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arus_pasha_t"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint=""
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arus_pasha_n"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint=""
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/penyebab_gangguan"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint=""
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gps"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text=""
            android:hint=""
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foto_1"
            android:textColor="@color/black"
            android:padding="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_listrik1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foto_2"
            android:textColor="@color/black"
            android:padding="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_listrik2"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>

        <TextView
            android:layout_marginTop="@dimen/layout_marginTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jam"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_gangguan"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rayon"
            android:textAllCaps="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/penyulang"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/yellowDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/indikasi"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"/>
    </LinearLayout>
</ScrollView>
