<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_gangguan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/layout_marginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        app:errorEnabled="true"
        android:hint="@string/tanggal_gangguan">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        app:errorEnabled="true"
        android:hint="@string/jam">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:ems="10"
            android:drawablePadding="8dp"/>
    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:text="@string/rayon"
            android:textAllCaps="true" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:padding="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:text="@string/indikasi"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:padding="20dp"/>

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arus_pasha_r"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_minus"
            android:drawableRight="@drawable/ic_plus"/>

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arus_pasha_s"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_minus"
            android:drawableRight="@drawable/ic_plus"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:padding="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="15sp"
            android:layout_marginLeft="280dp"
            android:textColor="@color/design_default_color_primary"/>
    </LinearLayout>

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arus_pasha_t"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_minus"
            android:drawableRight="@drawable/ic_plus"/>

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arus_pasha_n"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_minus"
            android:drawableRight="@drawable/ic_plus"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/layout_marginTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            app:errorEnabled="true"
            android:hint="@string/penyebab_gangguan">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gps"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:drawableRight="@drawable/ic_location"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foto_1"
            android:textColor="@color/black"
            android:padding="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foto_2"
            android:textColor="@color/black"
            android:padding="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:padding="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="15sp"
                android:layout_marginLeft="280dp"
                android:textColor="@color/design_default_color_primary"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
